# QuizBot

./: .coveralls.yml  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .kodiak.toml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Procfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/prompts/: bug-review.prompt.yml  feature-review.prompt.yml
.github/workflows/: ai-triage.yml  ci.yml  test.yml
docs/: conf.py  index.rst  module_docs.rst  question_types.rst  quiz_foundation.rst  telegram_bot.rst
migrations/: env.py
migrations/versions/: 87f3972b86f9_add_password_column_to_quizzes.py  c7c8b196a8ef_add_persistence_tables.py  fac614386af2_initial_schema.py
quizbot/bot/: attempt_quiz.py  bot.py  config.py  create_quiz.py  edit_quiz.py  models.py  persistence.py
quizbot/quiz/: attempt.py  question_factory.py  quiz.py
tests/bot/: conftest.py  test_attempt_quiz.py  test_bot.py  test_create_quiz.py  test_edit_quiz.py  test_persistence.py
tests/quiz/: test_attempt.py  test_question_factory.py  test_quiz.py
